--- a/app/assets/stylesheets/pages/_basic-layout.scss
+++ b/app/assets/stylesheets/pages/_basic-layout.scss
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   width: 100%;
+  min-width: 480px;
   font-family: $text-font;
   background-color: $bg-grey;
   position: relative;
