--- a/app/assets/stylesheets/components/_post-card.scss
+++ b/app/assets/stylesheets/components/_post-card.scss
@@ -47,3 +47,13 @@
   object-fit: cover;
   margin-right: 30px;
 }
+
+@media screen and (max-width: 768px) {
+  .post-body, .post-head{
+    display: block;
+  }
+  .post-title, .post-author, .post-img, .post-body {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
